:bug: fix: never wrap a button with an anchor! Although one may wrap an anchor with a button, instead!

--- a/crud/public/style.css
+++ b/crud/public/style.css
@@ -34,6 +34,7 @@ input[type=submit] {
 }
 input[type=submit]:hover {
     cursor: pointer;
+    transform: scale(.98);
 }
 .list input[type=submit] {
     margin: 0 0 10px 5px;
@@ -42,7 +43,8 @@ input[type=submit]:hover {
 #btn-cancel {
     margin-left: 5%;
 }
-#btn-cancel > a {
+
+a {
     text-decoration: none;
     color: black;
 }
